@@ -9,12 +9,33 @@ gen-md-tests: gen-md-tests.c
 
 header-tests.ok: header-tests.md simple-assembly.exe
 	./gen-md-tests header-tests.md
-	touch header_tests.ok
+	touch header-tests.ok
 
-generate_stamp: header-tests.ok
+generate-stamp: header-tests.ok
 	touch generate-stamp
 
-check_with_peverify: generate_stamp
+run-test: generate-stamp
+	@for i in *.exe; do \
+		RES=99; \
+		FIRST=`echo $$i | cut -d '-' -f 1`; \
+		if [ "$$FIRST" == "invalid" ];	then \
+			RES=1; \
+		fi; \
+		if [ "$$FIRST" == "valid" ]; then \
+			RES=0; \
+		fi; \
+		if [ $$RES != 99 ]; then \
+			../../metadata/pedump --verify metadata $$i >/dev/null 2>/dev/null; \
+			R=$$?; \
+			if [ $$R != $$RES ]; then \
+				echo "$$i failed expected $$RES but got $$R"; \
+			fi; \
+		fi; \
+	done
+
+
+
+check_with_peverify: generate-stamp
 	@for i in *.exe; do \
 		RES=99; \
 		FIRST=`echo $$i | cut -d '-' -f 1`; \
